@@ -1,4 +1,4 @@
-/* $Id: gadget.c,v 1.4 2005-01-24 22:19:10 schaffner Exp $ */
+/* $Id: gadget.c,v 1.5 2005-02-26 09:50:36 chris Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -13,7 +13,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 */
 
 #ifdef RCS
-static char rcsid[] = "$Id: gadget.c,v 1.4 2005-01-24 22:19:10 schaffner Exp $";
+static char rcsid[] = "$Id: gadget.c,v 1.5 2005-02-26 09:50:36 chris Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
@@ -37,7 +37,7 @@ UI_GADGET * ui_gadget_add( UI_WINDOW * wnd, short kind, short x1, short y1, shor
 {
 	UI_GADGET * gadget;
 
-	gadget = (UI_GADGET *)malloc( sizeof(UI_GADGET) );
+	gadget = (UI_GADGET *) d_malloc(sizeof(UI_GADGET));
 	if (gadget==NULL) exit(1);
 
 	if (wnd->gadget == NULL )
