@@ -14,6 +14,9 @@
 	* main/inferno.c: determine properly if 800x600 resolution is
 	available (for editor)
 
+	* ui/checkbox.c, ui/gadget.c, ui/inputbox.c, ui/menu.c, 
+	ui/window.c: use d_malloc, d_calloc, d_strdup and d_free
+
 2005-02-25  Chris Taylor  <chris@icculus.org>
 
 	* arch/carbon/conf.h, D2X.make: no defining OGL in conf.h,
